change according new debugging and adding icon. and image of operator and vechile
